--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^21.1.5",
     "@types/node": "^8.0.48",
     "@types/react": "^16.0.20",
-    "@types/react-dom": "^16.0.2"
+    "@types/react-dom": "^16.0.2",
+    "@types/react-router": "^4.0.16"
   }
 }
